--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,3 +15,10 @@ body {
     transform: translate(-50%, -50%);
     color: white;
   }
+
+  .center {
+    margin: auto;
+    width: 300px;
+    border: 3px solid green;
+    /* padding: 10px; */
+  }
