--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,18 +7,67 @@ body {
     height: 100vh;
   }
 
-  .form {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
 
-  .center {
-    margin: auto;
-    width: 300px;
-    border: 3px solid green;
-    /* padding: 10px; */
-  }
+.container-outer {
+  position: absolute;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+}
+
+.container-inner {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0px 20px 0px;
+}
+
+.item {
+  margin: auto;
+  margin-bottom: 5px;
+}
+
+
+
+
+
+
+
+
+.input-group {
+  position: relative;
+ }
+ 
+ .input {
+  border: solid 3px #9e9e9e;
+  border-radius: 1rem;
+  background: none;
+  padding: 0.75rem;
+  font-size: 1rem;
+  color: #dddddd;
+  transition: border 150ms cubic-bezier(0.4,0,0.2,1);
+ }
+ 
+ .user-label {
+  position: absolute;
+  left: 15px;
+  color: #e8e8e8;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4,0,0.2,1);
+ }
+ 
+ .input:focus, input:valid {
+  outline: none;
+  border: 4px solid #000000;
+ }
+ 
+ .input:focus ~ label, input:valid ~ label {
+  transform: translateY(-50%) scale(0.8);
+  background-color: #1b1b1b;
+  padding: 0 .2em;
+  color: #e4e4e4;
+ }
