--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 300px;
+  width: 375px;
   display: flex;
   flex-direction: column;
 }
@@ -22,7 +22,7 @@ body {
 .container-inner {
   display: flex;
   flex-direction: column;
-  margin: 20px 0px 20px 0px;
+  margin: 20px 0px 80px 0px;
 }
 
 .item {
@@ -30,11 +30,26 @@ body {
   margin-bottom: 5px;
 }
 
+input {
+  border-radius: 10px;
+  padding: 5px;
+  width: 225px;
+}
 
-
-
-
-
+.button {
+  background-color: rgb(78, 78, 78);
+  border: solid 2px;
+  border-color: black;
+  border-radius: 8px;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: "Courier New", Courier, monospace;
+  color: rgb(255, 255, 255);
+  padding: 5px;
+  margin-left: 10px;
+  text-align: center;
+  cursor: pointer;
+}
 
 
 .input-group {
@@ -42,9 +57,9 @@ body {
  }
  
  .input {
-  border: solid 3px #9e9e9e;
+  border: solid 3px #000000;
   border-radius: 1rem;
-  background: none;
+  background: rgba(0, 0, 0, 0.8);
   padding: 0.75rem;
   font-size: 1rem;
   color: #dddddd;
@@ -53,8 +68,9 @@ body {
  
  .user-label {
   position: absolute;
-  left: 15px;
-  color: #e8e8e8;
+  left: 42%;
+  /* color: #e8e8e8; */
+  color: #ffffff;
   pointer-events: none;
   transform: translateY(1rem);
   transition: 150ms cubic-bezier(0.4,0,0.2,1);
@@ -70,4 +86,141 @@ body {
   background-color: #1b1b1b;
   padding: 0 .2em;
   color: #e4e4e4;
+  left: 70px;
  }
+
+
+
+
+ /* From Uiverse.io by Yaya12085 */ 
+.radio-inputs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 350px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  
+}
+
+.radio-inputs > * {
+  margin: 6px;
+  
+}
+
+.radio-input:checked + .radio-tile {
+  border-color: #292929;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  color: #696969;
+}
+
+.radio-input:checked + .radio-tile:before {
+  transform: scale(1);
+  opacity: 1;
+  background-color: #202020;
+  border-color: #949494;
+  
+}
+
+.radio-input:checked + .radio-tile .radio-icon svg {
+  fill: #8b8b8b;
+}
+
+
+
+
+.radio-input:checked + .radio-tile .radio-label {
+  font-size: larger;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: "Courier New", Courier, monospace;
+  color: rgb(255, 255, 255);
+}
+
+
+
+
+
+
+
+.radio-input:focus + .radio-tile {
+  border-color: #b3b3b3;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 0 0 4px #7c7c7c;
+}
+
+.radio-input:focus + .radio-tile:before {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.radio-tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 125px;
+  min-height: 50px;
+  border-radius: 0.5rem;
+  border: 2px solid #cacaca;
+  background-color: #535353;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  transition: 0.15s ease;
+  cursor: pointer;
+  position: relative;
+}
+
+.radio-tile:before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0.75rem;
+  height: 0.75rem;
+  border: 2px solid #d3d3d3;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 0.25rem;
+  left: 0.25rem;
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.25s ease;
+}
+
+.radio-tile:hover {
+  border-color: #a1a1a1;
+}
+
+.radio-tile:hover:before {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.radio-icon svg {
+  width: 2rem;
+  height: 2rem;
+  fill: #000000;
+}
+
+.radio-label {
+  color: #707070;
+  transition: 0.375s ease;
+  text-align: center;
+  font-size: larger;
+  font-weight: bold;
+  font-size: 13px;
+  font-size: 18px;
+  font-family: "Courier New", Courier, monospace;
+  color: rgb(160, 160, 160);
+}
+
+.radio-input {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
